--- a/src/sass/components/layouts/_footer.scss
+++ b/src/sass/components/layouts/_footer.scss
@@ -144,7 +144,7 @@
         background-image: url(../../../assets/images/footer.png);
         background-repeat: no-repeat;
         // background-size: 100% 400px;
-        height: 400px;
+        height: 500px;
         // padding-top: -200px;
         width: 100%;
         .footer-content-top {
@@ -153,6 +153,7 @@
             justify-content: space-between;
             position: relative;
             bottom: -110px;
+            // height: -40%;
             padding: 0 10%;
             .footer-left {
                 &-top {
