--- a/src/sass/components/pages/home/_valued-costumer.scss
+++ b/src/sass/components/pages/home/_valued-costumer.scss
@@ -198,8 +198,9 @@
     .swiper-container {
         // width: 640px;
         // width: 51rem;
-        width: 70%;
-        padding-left: 75px;
+        width: 55%;
+        // padding-left: 75px;
+        padding-left: 80px;
     }
     .swiper-slide {
         align-items: flex-start;
@@ -291,7 +292,7 @@
         // width: 768px;
         width: 51rem;
         // width: 100%;
-        padding-left: 85px;
+        padding-left: 90px;
     }
     .swiper-slide {
         align-items: flex-start;
